ci: use foliage tags on ci-tasks COMPASS-7956 (#6168)
* use mothra tags

* break some tests

* un-break some tests

--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -254,6 +254,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_creates_breaking_commit
     commands:
       - func: prepare
       - func: install
@@ -1482,6 +1484,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1505,6 +1509,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1528,6 +1534,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1551,6 +1559,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1572,6 +1582,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1593,6 +1605,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1614,6 +1628,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1635,6 +1651,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
@@ -1656,6 +1674,8 @@ tasks:
     tags:
       - required-for-publish
       - run-on-pr
+      - assigned_to_jira_team_compass_compass
+      - foliage_check_task_only
     commands:
       - func: prepare
       - func: install
