--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -184,7 +184,7 @@
     "clipboard": "^2.0.6",
     "kerberos": "^2.1.1",
     "keytar": "^7.9.0",
-    "mongodb-client-encryption": "~6.0.1",
+    "mongodb-client-encryption": "^6.1.0",
     "os-dns-native": "^1.2.1",
     "system-ca": "^2.0.0"
   },
