--- a/packages/compass-web/package.json
+++ b/packages/compass-web/package.json
@@ -120,6 +120,7 @@
     "mongodb": "^6.8.0",
     "mongodb-connection-string-url": "^3.0.1",
     "mongodb-data-service": "^22.23.1",
+    "mongodb-ns": "^2.4.2",
     "nyc": "^15.1.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
