--- a/packages/compass-aggregations/package.json
+++ b/packages/compass-aggregations/package.json
@@ -35,12 +35,13 @@
     "@mongodb-js/eslint-config-compass": "^1.1.6",
     "@mongodb-js/mocha-config-compass": "^1.4.1",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/testing-library-compass": "^1.0.0",
     "@mongodb-js/tsconfig-compass": "^1.0.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "@types/babel__generator": "^7.6.8",
     "@types/lodash": "^4.14.188",
     "@types/semver": "^7.3.9",
-    "@types/babel__generator": "^7.6.8",
     "chai": "^4.3.6",
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
