--- a/packages/compass-web/package.json
+++ b/packages/compass-web/package.json
@@ -87,6 +87,7 @@
     "@mongodb-js/eslint-config-compass": "^1.1.6",
     "@mongodb-js/mocha-config-compass": "^1.4.1",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/testing-library-compass": "^1.0.0",
     "@mongodb-js/tsconfig-compass": "^1.0.4",
     "@mongodb-js/webpack-config-compass": "^1.4.1",
     "@testing-library/react": "^12.1.5",
