--- a/packages/compass-workspaces/package.json
+++ b/packages/compass-workspaces/package.json
@@ -55,8 +55,8 @@
     "@mongodb-js/compass-components": "^1.29.3",
     "@mongodb-js/compass-connections": "^1.41.0",
     "@mongodb-js/compass-logging": "^1.4.6",
-    "compass-preferences-model": "^2.28.2",
     "bson": "^6.7.0",
+    "compass-preferences-model": "^2.28.2",
     "hadron-app-registry": "^9.2.5",
     "lodash": "^4.17.21",
     "mongodb-collection-model": "^5.23.2",
@@ -71,6 +71,7 @@
     "@mongodb-js/eslint-config-compass": "^1.1.6",
     "@mongodb-js/mocha-config-compass": "^1.4.1",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/testing-library-compass": "^1.0.0",
     "@mongodb-js/tsconfig-compass": "^1.0.4",
     "@types/chai": "^4.2.21",
     "@types/chai-dom": "^0.0.10",
