chore(testing-library): add missing deps

--- a/configs/testing-library-compass/.depcheckrc
+++ b/configs/testing-library-compass/.depcheckrc
@@ -13,6 +13,7 @@ ignores:
   - '@mongodb-js/connection-info'
   - '@mongodb-js/compass-connections'
   - '@mongodb-js/compass-components'
+  - '@mongodb-js/connection-storage'
   - 'compass-preferences-model'
   - 'hadron-app-registry'
   - 'mongodb-data-service'
