--- a/packages/compass-components/tsconfig.json
+++ b/packages/compass-components/tsconfig.json
@@ -4,5 +4,5 @@
     "outDir": "lib"
   },
   "include": ["src/**/*"],
-  "exclude": ["./src/**/*.spec.*"]
+  "exclude": ["./src/**/*.spec.*", "./src/**/*.test.*"]
 }
