--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "npm install && lerna run bootstrap --stream",
     "postbootstrap": "npm run compile --workspace=@mongodb-js/testing-library-compass",
     "bootstrap-ci": "npm ci && lerna run bootstrap",
+    "postbootstrap-ci": "npm run postbootstrap",
     "precheck": "npm run depcheck && npm run check-logids && npm run check-leafygreen-dependency-usage",
     "changed": "node ./scripts/changed.js",
     "check": "lerna run check --stream",
