chore(testing-library): move unit testing helpers to their own package (#6198)
* chore(testing-library): move unit testing helpers to their own package

* chore(testing-library): remove bootstrap from testing library, do it as a post script instead

* chore(testing-library): resolve testing-library from source

* chore(testing-library): add missing deps

* chore(compass-components): exclude test files from compilation

* chore: typo

* chore(ci): postbootstrap for ci

* chore(ci): and bootstrap in another place

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "SSPL",
   "scripts": {
     "bootstrap": "npm install && lerna run bootstrap --stream",
+    "postbootstrap": "npm run compile --workspace=@mongodb-js/testing-library-compass",
     "bootstrap-ci": "npm ci && lerna run bootstrap",
+    "postbootstrap-ci": "npm run postbootstrap",
     "precheck": "npm run depcheck && npm run check-logids && npm run check-leafygreen-dependency-usage",
     "changed": "node ./scripts/changed.js",
     "check": "lerna run check --stream",
