--- a/configs/tsconfig-compass/tsconfig.react.json
+++ b/configs/tsconfig-compass/tsconfig.react.json
@@ -1,3 +1,6 @@
 {
-  "extends": "@mongodb-js/tsconfig-devtools/tsconfig.react.json"
+  "extends": "@mongodb-js/tsconfig-devtools/tsconfig.react.json",
+  "compilerOptions": {
+    "removeComments": false
+  }
 }
