--- a/configs/mocha-config-compass/window-config.json
+++ b/configs/mocha-config-compass/window-config.json
@@ -4,6 +4,7 @@
     "direct-write": true,
     "nodeIntegration": true,
     "contextIsolation": false,
-    "enableRemoteModule": true
+    "enableRemoteModule": true,
+    "nodeIntegrationInWorker": true
   }
 }
