--- a/packages/compass-preferences-model/package.json
+++ b/packages/compass-preferences-model/package.json
@@ -64,7 +64,7 @@
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.1.6",
     "@mongodb-js/mocha-config-compass": "^1.4.1",
-    "@testing-library/react": "^12.1.5",
+    "@mongodb-js/testing-library-compass": "^1.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/yargs-parser": "21.0.0",
     "chai": "^4.3.6",
