--- a/packages/hadron-app-registry/package.json
+++ b/packages/hadron-app-registry/package.json
@@ -53,8 +53,8 @@
     "@mongodb-js/eslint-config-compass": "^1.1.6",
     "@mongodb-js/mocha-config-compass": "^1.4.1",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/testing-library-compass": "^1.0.0",
     "@mongodb-js/tsconfig-compass": "^1.0.4",
-    "@testing-library/react": "^12.1.5",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/reflux": "^6.4.3",
