--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "scripts"
   ],
   "overrides": {
-    "mongodb-client-encryption": "^6.1.0"
+    "mongodb-client-encryption": "^6.1.0",
+    "dset": "^3.1.4"
   }
 }
