--- a/scripts/package.json
+++ b/scripts/package.json
@@ -42,6 +42,7 @@
     "commander": "^11.0.0",
     "electron": "^30.5.0",
     "jsdom": "^24.1.3",
+    "lodash": "^4.17.21",
     "make-fetch-happen": "^8.0.14",
     "pacote": "^11.3.5",
     "pkg-up": "^3.1.0",
