--- a/packages/atlas-service/package.json
+++ b/packages/atlas-service/package.json
@@ -78,12 +78,13 @@
     "@mongodb-js/compass-telemetry": "^1.1.6",
     "@mongodb-js/compass-user-data": "^0.3.6",
     "@mongodb-js/compass-utils": "^0.6.11",
+    "@mongodb-js/connection-info": "^0.7.0",
     "@mongodb-js/devtools-connect": "^3.2.10",
     "@mongodb-js/devtools-proxy-support": "^0.3.9",
     "@mongodb-js/oidc-plugin": "^1.1.1",
-    "hadron-app-registry": "^9.2.5",
     "compass-preferences-model": "^2.28.2",
     "electron": "^30.5.0",
+    "hadron-app-registry": "^9.2.5",
     "hadron-ipc": "^3.2.22",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
