--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
   - name: Bug Reports
-    url: https://jira.mongodb.org/projects/COMPASS/issues/
+    url: https://jira.mongodb.org/
     about: Report a bug via Jira.
   - name: Feature Request
     url: https://feedback.mongodb.com/forums/924283-compass
