Revert "chore(deps): update express COMPASS-8293 (#6246)"
This reverts commit d9484236eb43149af75da302c59c798ee2e1bd41.

--- a/package.json
+++ b/package.json
@@ -94,5 +94,8 @@
     "packages/*",
     "configs/*",
     "scripts"
-  ]
+  ],
+  "overrides": {
+    "mongodb-client-encryption": "^6.1.0"
+  }
 }
