chore(deps): hoist webpack; remove depcheck workarounds

--- a/packages/compass-explain-plan/.depcheckrc
+++ b/packages/compass-explain-plan/.depcheckrc
@@ -7,5 +7,9 @@ ignores:
   - '@types/chai-dom'
   - '@types/react'
   - '@types/react-dom'
+# TODO(COMPASS-8312): depcheck doesn't count this dependency because it's a
+# types only import and the depcheck parser is resolving the @types/<name>
+# package as a dep instead
+  - 'd3-hierarchy'
 ignore-patterns:
   - 'dist'
