--- a/.depcheckrc
+++ b/.depcheckrc
@@ -1,17 +1,11 @@
 ignores:
   - '@mongodb-js/bump-monorepo-packages'
   - '@mongodb-js/sbom-tools'
-  # TODO: We keep webpack-cli/serve and testing-library/dom at the root to work
-  # around weird npm workspace hoising issues caused by outdated transient
-  # dependencies. This can go away when we update webpack and leafygreen to the
-  # same version everywhere.
+  # TODO: We keep testing-library/dom at the root to work around weird npm
+  # workspace hoising issues caused by outdated transient dependencies. This can
+  # go away when we update all our usage of @testing-library packages to the
+  # version matching what @leafygreen is using
   - '@testing-library/dom'
-  # TODO: To work around https://github.com/depcheck/depcheck/issues/688 we keep
-  # some babel dependencies at the root to guarantee that their version is not
-  # bumped higher than the version that breaks depcheck package
-  - '@babel/core'
-  - '@babel/parser'
-  - 'babel-loader'
   # npm picks up the node-gyp installation in this repository rather than the
   # one it ships with, so we install one of our own to get the version right
   # (because we need one with vscode 2022 support for github actions CI)
