--- a/packages/compass-e2e-tests/.depcheckrc
+++ b/packages/compass-e2e-tests/.depcheckrc
@@ -5,3 +5,7 @@ ignores:
   - 'mongodb-compass'
   - 'ps-list'
   - 'mongodb-runner'
+# TODO(COMPASS-8312): depcheck doesn't count this dependency because it's a
+# types only import and the depcheck parser is resolving the @types/<name>
+# package as a dep instead
+  - 'puppeteer'
