--- a/scripts/package.json
+++ b/scripts/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.1.7",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/tsconfig-compass": "^1.0.5",
     "depcheck": "^1.4.1",
     "eslint": "^7.25.0",
     "prettier": "^2.7.1"
