--- a/packages/compass-web/package.json
+++ b/packages/compass-web/package.json
@@ -84,6 +84,7 @@
     "@mongodb-js/compass-welcome": "^0.40.0",
     "@mongodb-js/compass-workspaces": "^0.23.0",
     "@mongodb-js/connection-storage": "^0.21.0",
+    "@mongodb-js/devtools-proxy-support": "^0.3.9",
     "@mongodb-js/eslint-config-compass": "^1.1.7",
     "@mongodb-js/mocha-config-compass": "^1.4.2",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
