chore(connections): remove connectionInfoAccess interface from everywhere in the app COMPASS-8306 (#6249)
* chore(connections): remove connectionInfoAccess interface from everywhere in the app

* chore: fix various check failures

* chore(serverstats): esm export for refactored component

* chore(serverstats): fix component import

--- a/package.json
+++ b/package.json
@@ -91,5 +91,10 @@
     "packages/*",
     "configs/*",
     "scripts"
-  ]
+  ],
+  "overrides": {
+    "@types/enzyme": {
+      "@types/react": "^17.0.5"
+    }
+  }
 }
