--- a/packages/compass-serverstats/package.json
+++ b/packages/compass-serverstats/package.json
@@ -49,9 +49,9 @@
     "@mongodb-js/eslint-config-compass": "^1.1.7",
     "@mongodb-js/mocha-config-compass": "^1.4.2",
     "@mongodb-js/prettier-config-compass": "^1.0.2",
+    "@mongodb-js/testing-library-compass": "^1.0.0",
     "@mongodb-js/tsconfig-compass": "^1.0.5",
     "@types/d3": "^3.5.x",
-    "@types/enzyme": "^3.10.14",
     "chai": "^4.1.2",
     "depcheck": "^1.4.1",
     "electron-mocha": "^12.2.0",
