--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -54,6 +54,7 @@
     "@mongodb-js/prettier-config-compass": "^1.0.2",
     "@mongodb-js/testing-library-compass": "^1.0.1",
     "@mongodb-js/tsconfig-compass": "^1.0.5",
+    "@types/enzyme": "^3.10.14",
     "@types/reflux": "^6.4.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
