--- a/packages/atlas-service/package.json
+++ b/packages/atlas-service/package.json
@@ -78,6 +78,7 @@
     "@mongodb-js/compass-telemetry": "^1.1.7",
     "@mongodb-js/compass-user-data": "^0.3.7",
     "@mongodb-js/compass-utils": "^0.6.12",
+    "@mongodb-js/connection-info": "^0.8.0",
     "@mongodb-js/devtools-connect": "^3.2.10",
     "@mongodb-js/devtools-proxy-support": "^0.3.9",
     "@mongodb-js/oidc-plugin": "^1.1.1",
