--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -97,6 +97,7 @@
     "mongodb-data-service": "^22.23.3",
     "mongodb-ns": "^2.4.2",
     "mongodb-query-parser": "^4.2.3",
+    "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "reflux": "^0.4.1",
