--- a/packages/compass-explain-plan/package.json
+++ b/packages/compass-explain-plan/package.json
@@ -75,6 +75,7 @@
     "@mongodb-js/compass-editor": "^0.30.0",
     "@mongodb-js/compass-logging": "^1.4.7",
     "@mongodb-js/compass-telemetry": "^1.1.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "@mongodb-js/explain-plan-helper": "^1.2.3",
     "compass-preferences-model": "^2.28.3",
     "d3": "^3.5.17",
