--- a/packages/compass-export-to-language/package.json
+++ b/packages/compass-export-to-language/package.json
@@ -54,6 +54,7 @@
     "@mongodb-js/compass-editor": "^0.30.0",
     "@mongodb-js/compass-maybe-protect-connection-string": "^0.26.3",
     "@mongodb-js/compass-telemetry": "^1.1.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "@mongodb-js/shell-bson-parser": "^1.1.2",
     "bson-transpilers": "^3.0.9",
     "compass-preferences-model": "^2.28.3",
