--- a/packages/compass-field-store/package.json
+++ b/packages/compass-field-store/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@mongodb-js/compass-connections": "^1.42.0",
     "@mongodb-js/compass-logging": "^1.4.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "hadron-app-registry": "^9.2.6",
     "lodash": "^4.17.21",
     "mongodb-schema": "^12.2.0",
