--- a/packages/compass-query-bar/package.json
+++ b/packages/compass-query-bar/package.json
@@ -76,6 +76,7 @@
     "@mongodb-js/compass-generative-ai": "^0.22.3",
     "@mongodb-js/compass-logging": "^1.4.7",
     "@mongodb-js/compass-telemetry": "^1.1.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "@mongodb-js/mongodb-constants": "^0.10.0",
     "@mongodb-js/my-queries-storage": "^0.16.0",
     "bson": "^6.7.0",
