--- a/packages/compass-settings/package.json
+++ b/packages/compass-settings/package.json
@@ -53,6 +53,7 @@
     "@mongodb-js/compass-components": "^1.29.4",
     "@mongodb-js/compass-generative-ai": "^0.22.3",
     "@mongodb-js/compass-logging": "^1.4.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "compass-preferences-model": "^2.28.3",
     "hadron-app-registry": "^9.2.6",
     "hadron-ipc": "^3.2.23",
