--- a/packages/compass-workspaces/package.json
+++ b/packages/compass-workspaces/package.json
@@ -55,6 +55,7 @@
     "@mongodb-js/compass-components": "^1.29.4",
     "@mongodb-js/compass-connections": "^1.42.0",
     "@mongodb-js/compass-logging": "^1.4.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "bson": "^6.7.0",
     "compass-preferences-model": "^2.28.3",
     "hadron-app-registry": "^9.2.6",
