--- a/packages/databases-collections/package.json
+++ b/packages/databases-collections/package.json
@@ -65,6 +65,7 @@
     "@mongodb-js/compass-editor": "^0.30.0",
     "@mongodb-js/compass-logging": "^1.4.7",
     "@mongodb-js/compass-telemetry": "^1.1.7",
+    "@mongodb-js/compass-utils": "^0.6.12",
     "@mongodb-js/compass-workspaces": "^0.23.0",
     "@mongodb-js/databases-collections-list": "^1.39.0",
     "@mongodb-js/my-queries-storage": "^0.16.0",
