--- a/packages/compass-global-writes/package.json
+++ b/packages/compass-global-writes/package.json
@@ -49,8 +49,16 @@
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
   "dependencies": {
+    "@mongodb-js/atlas-service": "^0.28.3",
+    "@mongodb-js/compass-collection": "^4.41.0",
+    "@mongodb-js/compass-components": "^1.29.4",
+    "@mongodb-js/compass-connections": "^1.42.0",
+    "@mongodb-js/compass-logging": "^1.4.7",
+    "@mongodb-js/compass-telemetry": "^1.1.7",
+    "hadron-app-registry": "^9.2.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.1.7",
@@ -67,7 +75,6 @@
     "chai": "^4.3.6",
     "depcheck": "^1.4.1",
     "eslint": "^7.25.0",
-    "hadron-app-registry": "^9.2.6",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
