--- a/packages/compass-global-writes/package.json
+++ b/packages/compass-global-writes/package.json
@@ -57,8 +57,9 @@
     "@mongodb-js/compass-telemetry": "^1.1.7",
     "hadron-app-registry": "^9.2.6",
     "react": "^17.0.2",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.1.7",
