--- a/packages/compass-web/package.json
+++ b/packages/compass-web/package.json
@@ -74,6 +74,7 @@
     "@mongodb-js/compass-export-to-language": "^9.18.0",
     "@mongodb-js/compass-field-store": "^9.17.0",
     "@mongodb-js/compass-generative-ai": "^0.22.3",
+    "@mongodb-js/compass-global-writes": "^1.0.0",
     "@mongodb-js/compass-indexes": "^5.41.0",
     "@mongodb-js/compass-logging": "^1.4.7",
     "@mongodb-js/compass-query-bar": "^8.43.0",
