--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -205,6 +205,7 @@
     "@mongodb-js/compass-field-store": "^9.17.0",
     "@mongodb-js/compass-find-in-page": "^4.30.4",
     "@mongodb-js/compass-generative-ai": "^0.22.3",
+    "@mongodb-js/compass-global-writes": "^1.0.0",
     "@mongodb-js/compass-import-export": "^7.41.0",
     "@mongodb-js/compass-indexes": "^5.41.0",
     "@mongodb-js/compass-intercom": "^0.12.3",
