--- a/packages/hadron-build/.eslintrc
+++ b/packages/hadron-build/.eslintrc
@@ -7,9 +7,7 @@
     "ecmaVersion": 2020
   },
   "extends": ["@mongodb-js/eslint-config-compass/plugin"],
-  "plugins": [
-    "mocha"
-  ],
+  "plugins": ["mocha"],
   "rules": {
     "mocha/no-mocha-arrows": 0,
     "mocha/no-setup-in-describe": 0,
