Ran prettier --write in mongodb-explain-compat

--- a/packages/mongodb-explain-compat/.eslintrc
+++ b/packages/mongodb-explain-compat/.eslintrc
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "semistandard"
-  ],
+  "extends": ["semistandard"],
   "rules": {
     "space-before-function-paren": 0
   }
